[package]
name = "snowflake_explorer"
version = "0.1.0"
authors = ["Raiyan Hossain <ryanhossain9797@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.96"
snowflake-api = "0.7.0"